Fix overflow problem.

--- a/app/css/photoStripe.styl
+++ b/app/css/photoStripe.styl
@@ -20,6 +20,7 @@
       margin: auto;
       min-width: 50%;
       min-height: 50%;
+      overflow: hidden
   @media(max-width: 767px)
     .imgBack
       top: -50%;
